	* Commandline mode added - use "mtpaint --cmd" to run a script without GUI
	* Keyboard shortcuts can now be reconfigured - "Help->Keyboard shortcuts"
	* New keyboard shortcut Ctrl+H added for Channels->Hide image
	* Optional gamma correction for painting and masking (Preferences->General->Use gamma correction when painting)
	* Text tools now allow selection of DPI value, and alignment for multiline text
	* Distance function for shapeburst gradients is now selectable : "Distance type"
	* Composite images now can have alpha transparency, when background is non-opaque
	* Background layer now can use transparency like any other layer
	* Background layer position now can be changed via Ctrl+arrows or layers window spinbuttons, like any other layer
	* Lasso tool can be configured to shrink selection based on the selection channel - right click the tool icon
	* Clone tool is now continuous
	* Clone tool can be configured to work in unaligned mode - right click the tool icon
	* Ctrl+Left click now positions clone source when using clone tool
	* Ctrl+Right click now deletes last point when making polygonal selection (from a closed polygon, deletes the point nearest to cursor)
	* Shift and Shift+Ctrl now constrain selection box width/height when resizing it by clicking and dragging
	* Zooming now can use mouse cursor position as its fixed point (Preferences->Interface->Zoom on cursor position)
	* Scroll wheel zoom now works for view window too
	* "Hide image" and "View alpha as an overlay" can now be toggled separately for each layer (Preferences->General->Enable overlays by layer)
	* New image format PMM (Portable MultiMap) added for interoperable storage and exchange of images : See handbook section A.2 for details
	* XPM files with 65-92 colours are now saved with smaller size
	* Raw RGB palette files (6-bit PAL and 8-bit ACT) can now be loaded/saved via the Palette menu
	* TIFF compression made configurable
	* Dimensions can now be specified when loading SVG files